--- a/config/database.yml
+++ b/config/database.yml
@@ -16,8 +16,9 @@ default: &default
   collation: utf8mb4_general_ci
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: rootRoot-2017
-  socket: /tmp/mysql.sock
+  password: root
+  host: 127.0.0.1
+  port: 3306
 
 development:
   <<: *default
